@@ -7,6 +7,7 @@
 	* lisp/sawfish/cfg/widgets/match-windows.jl: updated for above change
 
 	* lisp/sawfish/cfg/Makefile
+	* lisp/sawfish/cfg/widgets/gtk.jl
 	* lisp/sawfish/cfg/widgets/icon.jl: removed unused, dummy 'icon widget
 
 2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
